--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,17 +6,12 @@
         <div>
             <h1><a href="/">Classmeeting</a></h1>
         </div>
-
+        {% for post in posts %}
         <div>
-            <p>published: 15/12/2019</p>
-            <h2><a href="">My first post</a></h2>
-            <p>click here for details.</p>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-
-        <div>
-            <p>published: 15/12/2019</p>
-            <h2><a href="">My second post</a></h2>
-            <p>click here for details.</p>
-        </div>
+        {% endfor %}
     </body>
 </html>
